full POT and PO update for fedoracommunity.org

--- a/fedoracommunity.org/po/fi.po
+++ b/fedoracommunity.org/po/fi.po
@@ -1,178 +1,155 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
+# Toni Rantala <trantalafilo@gmail.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: Kévin Raymond <shaiton@fedoraproject.org>\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2017-03-29 08:24-0400\n"
+"Last-Translator: Toni Rantala <trantalafilo@gmail.com>\n"
 "Language-Team: Finnish (http://www.transifex.com/projects/p/fedora-web/language/fi/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: fi\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr ""
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
-msgstr ""
+msgstr "Fedora Indonesian yhteisö"
 
 #: data/content/apac.html:1
 msgid "Fedora Japan Community"
-msgstr ""
+msgstr "Fedora Japanin yhteisö"
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr ""
+msgid "Fedora Philippines Community"
+msgstr "Fedora Philippiinien yhteisö"
+
+#: data/content/apac.html:1
+msgid "Fedora Sri Lanka Community"
+msgstr "Fedora Sri Lankan yhteisö"
+
+#: data/content/apac.html:1
+msgid "Fedora Vietnam Community"
+msgstr "Fedora Vietnamin yhteisö"
+
+#: data/content/apac.html:1
+msgid "Fedora Myanmar Community"
+msgstr "Fedora Myanmarin yhteisö"
 
 #: data/content/apac.html:1
 msgid "Fedora Taiwan Community"
 msgstr ""
 
-#: data/content/apac.html:1
-msgid "Fedora Sri Lanka Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Vietnam Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr ""
-
-#: data/content/apac.html:26
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
-msgstr ""
+msgstr "Fedora-yhteisö| Aasian ja Tyynenmeren alue (APAC)"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
-msgstr ""
+msgstr " Aasian ja Tyynenmeren alue"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
-msgstr ""
+msgstr "Aluekohtaiset resurssit"
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
 msgstr "Fedoran Wiki"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
-msgstr ""
+msgstr "Postituslista"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
 msgstr "Tapahtumat"
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr ""
+msgstr "Yhteisön sivut tällä alueella"
 
 #: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr ""
+msgstr "Fedora Tšekkkiläinen yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr ""
+msgstr "Fedora Ranskalainen yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
-msgstr ""
+msgstr "Fedoran Saksan epävirallinen Fedora-portaali"
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr ""
+msgstr "Fedoran Kreikkalaisen yhteisö-portaali"
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr ""
+msgstr "Fedora Italialainen yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
-msgstr ""
+msgstr "Fedora Hollantilainen yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora Poland Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr ""
+msgstr "Fedora Puolan yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr ""
+msgstr "Fedora Venäjän yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr ""
+msgstr "Fedora Espanjan yhteisö"
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
-msgstr ""
+msgstr "Fedora Tunisian yhteisö"
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr ""
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
-msgstr ""
+msgstr "Fedora-yhteisö | Eurooppa (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
-msgstr ""
+msgstr "Eurooppa, Lähi-Itä, & Afrikka"
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
 msgstr ""
+"EMEA aluetta, mukaanlukien Eurooppa, Lähi-Itääja Afrikka, palvelee <a "
+"href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora EMEA "
+"lähettiläät ryhmä</a>."
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
 msgstr "Verkkosivut"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
-msgstr ""
+msgstr "Sähköpostiosoite"
 
 #: data/content/index.html:21
 msgid "Fedora Community | Index"
-msgstr ""
+msgstr "Fedora-yhteisö | luettelo"
 
 #: data/content/index.html:27 data/templates/head.html:14
 msgid "Home"
@@ -183,88 +160,55 @@ msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
 msgstr ""
+"Tämä on paikka jossa ihmiset jotka etsivät tiettyä paikallista Fedora-"
+"yhteisöä voivat löytää sen."
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
-msgstr ""
+msgstr "Aasian ja Tyynenmeren alue"
 
 #: data/content/index.html:32
 msgid "Europe"
-msgstr ""
+msgstr "Eurooppa"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
-msgstr ""
+msgstr "Latinalainen Amerikka"
 
 #: data/content/index.html:34 data/content/northam.html:28
 #: data/templates/head.html:53
 msgid "North America"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr ""
+msgstr "Pohjois-Amerikka"
 
 #: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr ""
+msgstr "Fedora Brasilian yhteisö"
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr ""
+msgstr "Fedora Chilen yhteisö"
 
 #: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
-msgstr ""
+msgstr "Fedora Nicaraguan yhteisö"
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr ""
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr ""
+msgstr "Fedora yhteisö| Latinalainen Amerikka (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
-msgstr ""
+msgstr "Chat"
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr ""
+msgstr "Fedora-yhteisö | Pohjois-Amerikka (NA)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
 msgstr ""
+"Fedora on muutakin. Vieraile virallisella Fedora-verkkosivulla osoitteessa: "
 
 #: data/templates/content-fpolinkback.html:14
 #, python-format
@@ -272,6 +216,8 @@ msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
 msgstr ""
+"Haluatko lisätä paikallisen yhteisösi Fedora-verkkosivun tähän hakemistoon?"
+"  <a href=\"%s\">Lähetä sähköpostia Fedora-verkkosivu tiimille </a>"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
@@ -282,11 +228,11 @@ msgid "Planet Fedora"
 msgstr "Fedora-planeetta"
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Fedoran viikkokatsaus"
+msgid "Fedora Magazine"
+msgstr "Fedora Magazine"
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "Dokumentaatio"
 
@@ -298,131 +244,162 @@ msgstr "Fedoran Wiki"
 msgid "Download"
 msgstr "Lataa"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Hanki Fedora"
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "Täysi latausluettelo"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
+msgid "Alternative Downloads"
+msgstr ""
+
+#: data/templates/footer.html:32
 msgid "Support"
 msgstr "Tuki"
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:33
 msgid "Get Help"
-msgstr "Hanki ohjeita"
+msgstr "Pyydä apua"
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
 msgstr "IRC-ohjeita"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
 msgstr "Postituslistaohjeita"
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "Foorumit"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr "Kysy Fedorasta"
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
 msgstr "Liity"
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
 msgstr "Liity Fedoraan"
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
 msgstr "Fedoran SIG:t"
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
 msgstr "Fedoran tilijärjestelmä"
 
-#: data/templates/footer.html:41
+#: data/templates/footer.html:46
 msgid "Fedora Community"
 msgstr "Fedora-yhteisö"
 
-#: data/templates/footer.html:46
+#: data/templates/footer.html:51
 msgid "Subprojects"
 msgstr "Aliprojektit"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
 msgstr "Käännökset"
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
 msgstr "Markkinointi"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
 msgstr "Lähettiläät"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
 msgstr "Suunnittelu"
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
 msgstr "Infrastruktuuri"
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
 msgstr "Verkkosivut"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
 msgstr "Kansainvälistäminen"
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
 msgstr "Uutiset"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
 msgstr "Special Interest Groupit (SIG:t)"
 
-#: data/templates/footer.html:67
+#: data/templates/footer.html:72
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedoraa sponsoroi Red Hat."
 
-#: data/templates/footer.html:68
+#: data/templates/footer.html:73
 msgid "Learn more about the relationship between Red Hat and Fedora >"
 msgstr "Lisätietoja Red Hatin ja Fedoran suhteesta >"
 
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr "© 2011 Red Hat, Inc. ja muita."
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "Yhteystiedot"
-
-#: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "Sponsorit"
-
-#: data/templates/footer.html:73
-msgid "Legal"
-msgstr "Lakiasiat"
-
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "Tavaramerkkiohjeet"
+#, fuzzy, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s Red Hat, Inc. ja muut."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "Fedora-projekti on yhteisön ylläpitämä ja johtama. Tämä on yhteisön ylläpitämä sivusto. Red Hat ei vastaa sisällöstä."
+msgstr ""
+"Fedora-projekti on yhteisön ylläpitämä ja johtama. Tämä on yhteisön "
+"ylläpitämä sivusto. Red Hat ei vastaa sisällöstä."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "Yhteystiedot"
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "Sponsorit"
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "Lakiasiat"
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "Tavaramerkkiohjeet"
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr "Sisällön lisenssi"
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
-msgstr ""
+msgstr "Aluekohtaiset Fedora-verkkosivut"
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "Hanki Fedora"
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -433,11 +410,13 @@ msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
 msgstr ""
+"Fedora Projektin jäsenet useissa maissa ylläpitävä omaa aluekohtaista "
+"sisältöä. Jokainen sivu on yksinään vastuussa tuottamastaan sisällöstä."
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
-msgstr ""
+msgstr "Lista aluekohtaisista verkkosivuista alempana."
 
 #: data/templates/head.html:51
 msgid "Europe, Middle East, and Africa"
-msgstr ""
+msgstr "Eurooppa, Lähi-Itä ja Afrikka"
