--- a/fedoracommunity.org/po/gu.po
+++ b/fedoracommunity.org/po/gu.po
@@ -1,179 +1,156 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
 # sweta <swkothar@redhat.com>, 2011
+# Pranjal Vyas <vyaspranjal33@gmail.com>, 2017. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: Kévin Raymond <shaiton@fedoraproject.org>\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2017-11-13 07:14-0500\n"
+"Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Gujarati (http://www.transifex.com/projects/p/fedora-web/language/gu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: gu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr ""
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
-msgstr ""
+msgstr "ફેડોરા ઇન્ડોનેશિયા સમુદાય "
 
 #: data/content/apac.html:1
 msgid "Fedora Japan Community"
-msgstr ""
+msgstr "ફેડોરા  જાપાન  સમુદાય "
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr ""
+msgid "Fedora Philippines Community"
+msgstr "ફેડોરા  ફિલિપાઇન્સ  સમુદાય "
+
+#: data/content/apac.html:1
+msgid "Fedora Sri Lanka Community"
+msgstr "ફેડોરા  શ્રીલંકા સમુદાય "
+
+#: data/content/apac.html:1
+msgid "Fedora Vietnam Community"
+msgstr "ફેડોરા  વિયેતનામ  સમુદાય "
+
+#: data/content/apac.html:1
+msgid "Fedora Myanmar Community"
+msgstr "ફેડોરા  મ્યાનમાર  સમુદાય "
 
 #: data/content/apac.html:1
 msgid "Fedora Taiwan Community"
 msgstr ""
 
-#: data/content/apac.html:1
-msgid "Fedora Sri Lanka Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Vietnam Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr ""
-
-#: data/content/apac.html:26
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
-msgstr "એશિયા પૅસિફિક"
+msgstr "ફેડોરા  જૂથ । એશિયા પૅસિફિક"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
 msgstr "એશિયા-પૅસિફિક"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
-msgstr ""
+msgstr "પ્રદેશાનુસર સ્રોત  "
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
-msgstr "Fedora વિકી પાનું"
+msgstr "ફેડોરા વિકી પાનું"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
 msgstr "મેઇલીંગ યાદી"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
-msgstr "ઘટનાઓ"
+msgstr "કાર્યક્રમો "
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr ""
+msgstr "આ  પ્રદેશ  ની  સમુદાય  સાઇટ્સ "
 
 #: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr ""
+msgstr "ફેડોરા  સીઝેક પ્રજાસતાક  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr ""
+msgstr "ફેડોરા  ફ્રેંચ  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
-msgstr ""
+msgstr "અનઅધિકૃત ફેડોરા  જર્મન  પોર્ટલ "
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr ""
+msgstr "ફેડોરા  ગ્રીક  સમુદાય  પોર્ટલ "
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr ""
+msgstr "ફેડોરા  ઇટાલિયન  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
-msgstr ""
+msgstr "ફેડોરા  નેધરલેન્ડ્સ  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora Poland Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr ""
+msgstr "ફેડોરા  પોલેન્ડ  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr ""
+msgstr "ફેડોરા રશિયન  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr ""
+msgstr "ફેડોરા  સ્પેનિશ  સમુદાય "
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
-msgstr ""
+msgstr "ફેડોરા  ટ્યૂનિશિયા  સમુદાય "
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr ""
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
-msgstr "યુરોપ (EMEA)"
+msgstr "ફેડોરા  જૂથ । યુરોપ (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
 msgstr "યુરોપ, મધ્ય પૂર્વ, અને આફ્રિકા"
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
 msgstr ""
+"યુરોપ ,મધ્ય  પૂર્વ અને  આફ્રિકા  સહીતના  EMEA પ્રદેશ   <a "
+"href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">ફેડોરા EMEA પ્રચારક "
+"જૂથ </a> દ્વારા સંભાળવામાં  આવે  છે "
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
 msgstr "વેબસાઇટ"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
 msgstr "ઇમેલ સરનામું"
 
 #: data/content/index.html:21
 msgid "Fedora Community | Index"
-msgstr "અનુક્રમણિકા"
+msgstr "ફેડોરા જૂથ । અનુક્રમણિકા"
 
 #: data/content/index.html:27 data/templates/head.html:14
 msgid "Home"
@@ -183,7 +160,7 @@ msgstr "ઘર"
 msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
-msgstr ""
+msgstr "આ એ જગ્યા છે જ્યાં લોકો પોતાના સ્થાનીય ફેડોરા સમુદાય ને શોધી શકે છે "
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
@@ -193,7 +170,7 @@ msgstr "એશિયા પૅસિફિક"
 msgid "Europe"
 msgstr "યુરોપ"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
 msgstr "લેટિન અમેરિકા"
@@ -204,68 +181,34 @@ msgid "North America"
 msgstr "ઉત્તર અમેરિકા"
 
 #: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr ""
-
-#: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr ""
+msgstr "ફેડોરા  બ્રાઝીલ  સમુદાય "
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr ""
+msgstr "ફેડોરા ચીલે  સમુદાય "
 
 #: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
-msgstr ""
+msgstr "ફેડોરા  નિકરાગુઆ  સમુદાય "
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr ""
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr "લૅટિન અમેરિકા (LATAM)"
+msgstr "ફેડોરા જૂથ । લૅટિન અમેરિકા (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
-msgstr "સંવાદ"
+msgstr "ગૉષ્ઠી "
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr "ઉત્તર અમેરિકા (NA)"
+msgstr "ફેડોરા જૂથ । ઉત્તર અમેરિકા (NA)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
 msgstr ""
+"ફેડોરા  માં ઘણું  બધું છે. અધિકૃત  ફેડોરા  પ્રોજેક્ટ  વેબસાઈટ  ની અહીં  "
+"મુલાકાત લો."
 
 #: data/templates/content-fpolinkback.html:14
 #, python-format
@@ -273,21 +216,23 @@ msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
 msgstr ""
+"તમારા  સ્થાનીય  ફેડોરા  સમુદાય ની  વેબસાઈટ ને અહીં  દર્શાવા માંગો  છો  ?<a "
+"href=\"%s\">ફેડોરા  વેબસાઇટ્સ ની  ટીમ ને  ઈમેલ  કરો </a >"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
-msgstr "Fedora વિશે"
+msgstr "ફેડોરા વિશે"
 
 #: data/templates/footer.html:11
 msgid "Planet Fedora"
-msgstr "પ્લાનેટ Fedora"
+msgstr "ફેડોરા  ગ્રહ "
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Fedora સાપ્તાહિક સમાચારો"
+msgid "Fedora Magazine"
+msgstr "ફેડોરા  સામયિક "
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "દસ્તાવેજીકરણ"
 
@@ -299,131 +244,163 @@ msgstr "Fedora વિકી"
 msgid "Download"
 msgstr "ડાઉનલોડ"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Fedora મેળવો"
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "સંપૂર્ણ ડાઉનલોડ યાદી"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
-msgid "Support"
-msgstr "આધાર"
+msgid "Alternative Downloads"
+msgstr ""
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:32
+msgid "Support"
+msgstr "સહાય "
+
+#: data/templates/footer.html:33
 msgid "Get Help"
 msgstr "મદદ મેળવો"
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
-msgstr "IRC મદદ"
+msgstr "IRC સંબંધિત મદદ"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
-msgstr "મેઇલીંગ યાદી મદદ"
+msgstr "મેઇલીંગ યાદી  સંબધિત  મદદ  "
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "જાહેર ચર્ચાનું સ્થાન"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr "ફેડોરા  ને  પૂછો "
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
-msgstr "જોડાવો"
+msgstr "જોડાઓ "
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
-msgstr "Fedora માં જોડાવો"
+msgstr "Fedora માં જોડાઓ "
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
-msgstr "Fedora SIGs"
+msgstr "ફેડોરા  મા  ખાસ  રસ ધરાવતું  જૂથ "
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
-msgstr "Fedora ખાતા સિસ્ટમ"
-
-#: data/templates/footer.html:41
-msgid "Fedora Community"
-msgstr "Fedora સમુદાય"
+msgstr "ફેડોરા  ખાતા પ્રણાલી "
 
 #: data/templates/footer.html:46
+msgid "Fedora Community"
+msgstr "ફેડોરા સમુદાય"
+
+#: data/templates/footer.html:51
 msgid "Subprojects"
-msgstr "ઉપપ્રોજેક્ટ"
+msgstr "પેટા પ્રોજેક્ટ"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
-msgstr "અનુવાદ"
+msgstr "અનુવાદન "
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
 msgstr "માર્કેટીંગ"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
 msgstr "ઍમ્બૅસેડરો"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
-msgstr "રચના"
+msgstr "આલેખન "
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
-msgstr "ઇન્ફ્રાસ્ટ્રક્ચર"
+msgstr "આધાર માળખું "
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
 msgstr "વેબસાઇટ"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
-msgstr "આંતરરાષ્ટ્રીય"
+msgstr "આંતરરાષ્ટ્રીકરણ "
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
 msgstr "સમાચારો"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
-msgstr "Special Interest Groups (SIGs)"
-
-#: data/templates/footer.html:67
-msgid "Fedora is sponsored by Red Hat."
-msgstr "Fedora એ Red Hat દ્દારા પ્રાયોજિત થયેલ છે."
-
-#: data/templates/footer.html:68
-msgid "Learn more about the relationship between Red Hat and Fedora >"
-msgstr "Red Hat અને Fedora વચ્ચે સંબંધ વિશે વધારે શીખો >"
-
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr "© 2011 Red Hat, Inc. અને બીજાઓ."
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "સંપર્ક"
+msgstr "કોઈ  વિષય માં   વિશેષ  રુચિ  ધરાવતું  જૂથ (SIGs)"
 
 #: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "પ્રાયોજકો"
+msgid "Fedora is sponsored by Red Hat."
+msgstr "ફેડોરા  ના પ્રાયોજક રેડહેટ  છે ."
 
 #: data/templates/footer.html:73
-msgid "Legal"
-msgstr "કાયદેસર"
+msgid "Learn more about the relationship between Red Hat and Fedora >"
+msgstr "Red Hat અને Fedora વચ્ચે સંબંધ વિશે વધારે જાણો  >"
 
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "ટ્રેડમાર્ક માર્ગદર્શન"
+#, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s રેડ હેટ  અને  અન્ય."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "Fedora પ્રોજેક્ટ સમુદાય દ્દારા ચલાવેલ અને સંચાલિત થયેલ છે. આ સમુદાય દ્દારા સંચાલિત થયેલ સાઇટ છે. Red Hat એ સમાવિષ્ટ માટે જવાબદાર નથી."
+msgstr ""
+"ફેડોરા પ્રોજેક્ટ સમુદાય દ્દારા ચલાવામાં અને સંચાલિત કરવામાં  આવે  છે. આ  "
+"સાઇટ સમુદાય દ્દારાસંચાલિત  છે. સાઇટ  મા આપેલ માહિત્તી  માટે રેડહેટ ની કોઈ "
+"જવાબદારી  નથી."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "સંપર્ક"
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "પ્રાયોજકો"
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "કાયદાકીય "
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "ટ્રેડમાર્ક માર્ગદર્શિકા "
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr "માહિતી  પરવાનો "
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
-msgstr ""
+msgstr "પ્રદેશ નિર્દિષ્ટ  ફેડોરા  વેબસાઇટ્સ "
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "ફેડોરા મેળવો"
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -434,10 +411,13 @@ msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
 msgstr ""
+"ફેડોરા  પ્રોજેક્ટ  વિવિધ  દેશો  ના  યોગદાનકો દ્વારા  પ્રદેશ નિર્દરિષ્ટ લખાણ"
+"  સંચાલિત  છે. દરેક  સાઈટ  સંપૂર્ણપણે જવાબ દાર છે.પોતાનું  લખાણ  મુકવા  માટે"
+"   "
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
-msgstr ""
+msgstr "પ્રદેશ નિર્દરિષ્ટ વેબસાઇટ્સ  ની યાદી  નીચે  ઉપલબ્ધ  છે "
 
 #: data/templates/head.html:51
 msgid "Europe, Middle East, and Africa"
