--- a/fedoracommunity.org/po/sv.po
+++ b/fedoracommunity.org/po/sv.po
@@ -1,178 +1,156 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
+# Göran Uddeborg <goeran@uddeborg.se>, 2015. #zanata
+# Göran Uddeborg <goeran@uddeborg.se>, 2016. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: Kévin Raymond <shaiton@fedoraproject.org>\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2016-11-01 06:40-0400\n"
+"Last-Translator: Göran Uddeborg <goeran@uddeborg.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/fedora-web/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: sv\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr ""
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
-msgstr ""
+msgstr "Fedorasällskapet i Indonesien"
 
 #: data/content/apac.html:1
 msgid "Fedora Japan Community"
-msgstr ""
+msgstr "Fedorasällskapet i Japan"
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Taiwan Community"
-msgstr ""
+msgid "Fedora Philippines Community"
+msgstr "Fedorasällskapet i Filippinerna"
 
 #: data/content/apac.html:1
 msgid "Fedora Sri Lanka Community"
-msgstr ""
+msgstr "Fedorasällskapet på Sri Lanka"
 
 #: data/content/apac.html:1
 msgid "Fedora Vietnam Community"
-msgstr ""
+msgstr "Fedorasällskapet i Vietnam"
 
 #: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr ""
+msgid "Fedora Myanmar Community"
+msgstr "Fedorasällskapet i Burma"
 
-#: data/content/apac.html:26
+#: data/content/apac.html:1
+msgid "Fedora Taiwan Community"
+msgstr "Fedorasällskapet på Taiwan"
+
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
-msgstr ""
+msgstr "Fedorasällskapet | Stillahavsasien (APAC)"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
-msgstr ""
+msgstr "Stillahavsasien"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
-msgstr ""
+msgstr "Regiongemensamma resurser"
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
-msgstr "Fedora-wiki"
+msgstr "Fedoras wikisida"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
-msgstr "E-postlista"
+msgstr "Sändlista"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
 msgstr "Händelser"
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr ""
+msgstr "Gemenskapsplatser i denna region"
 
 #: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr ""
+msgstr "Fedorasällskapet i Tjeckien"
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr ""
+msgstr "Fedorasällskapet i Frankrike"
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
-msgstr ""
+msgstr "Fedoras inofficiella tyska Fedoraportal"
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr ""
+msgstr "Fedoras grekiska gemenskapsportal"
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr ""
+msgstr "Fedorasällskapet i Italien"
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
-msgstr ""
+msgstr "Fedorasällskapet i Nederländerna"
 
 #: data/content/emea.html:1
 msgid "Fedora Poland Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr ""
+msgstr "Fedorasällskapet i Polen"
 
 #: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr ""
+msgstr "Fedorasällskapet i Ryssland"
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr ""
+msgstr "Fedorasällskapet i Spanien"
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
-msgstr ""
+msgstr "Fedorasällskapet i Tunisien"
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr ""
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
-msgstr ""
+msgstr "Fedorasällskapet | Europa (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
-msgstr ""
+msgstr "Europa, mellanöstern och Afrika"
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
 msgstr ""
+"EMEA-regionen, som innefattar Europa, mellanöstern och Afrika, sköts av <a "
+"href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedorasällskapet med"
+" ambassadörer för EMEA</a>."
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
-msgstr "Webbplatser"
+msgstr "Webbplats"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
-msgstr ""
+msgstr "E-postadress"
 
 #: data/content/index.html:21
 msgid "Fedora Community | Index"
-msgstr ""
+msgstr "Fedorasällskapet | Index"
 
 #: data/content/index.html:27 data/templates/head.html:14
 msgid "Home"
@@ -183,88 +161,54 @@ msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
 msgstr ""
+"Detta är en plats dit folk som letar efter sin egen lokala Fedoragrupp kan "
+"gå för att hitta den."
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
-msgstr ""
+msgstr "Stillahavsasien"
 
 #: data/content/index.html:32
 msgid "Europe"
-msgstr ""
+msgstr "Europa"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
-msgstr ""
+msgstr "Latinamerika"
 
 #: data/content/index.html:34 data/content/northam.html:28
 #: data/templates/head.html:53
 msgid "North America"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr ""
+msgstr "Nordamerika"
 
 #: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr ""
+msgstr "Fedoras portal i Brasilien"
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr ""
+msgstr "Fedorasällskapet i Chile"
 
 #: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
-msgstr ""
+msgstr "Fedorasällskapet i Nicaragua"
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr ""
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr ""
+msgstr "Fedorasällskapet | Latinamerika (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
-msgstr ""
+msgstr "Chatt"
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr ""
+msgstr "Fedorasällskapet | Nordamerika (NA)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
-msgstr ""
+msgstr "Fedora är mer än så.  Besök Fedoraprojektets officiella webbplats på:"
 
 #: data/templates/content-fpolinkback.html:14
 #, python-format
@@ -272,6 +216,8 @@ msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
 msgstr ""
+"Vill du lägga till ditt lokala Fedorasällskaps webbplats till denna katalog?"
+"  <a href=\"%s\">Skicka e-post till Fedoras webbplatsgrupp</a>"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
@@ -282,11 +228,11 @@ msgid "Planet Fedora"
 msgstr "Planet Fedora"
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Fedora Weekly News"
+msgid "Fedora Magazine"
+msgstr "Fedora Magazine"
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "Dokumentation"
 
@@ -296,133 +242,164 @@ msgstr "Fedora-wiki"
 
 #: data/templates/footer.html:20
 msgid "Download"
-msgstr "Ladda ned"
+msgstr "Hämta ner"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Skaffa Fedora"
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "Allt att hämta"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
+msgid "Alternative Downloads"
+msgstr ""
+
+#: data/templates/footer.html:32
 msgid "Support"
 msgstr "Support"
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:33
 msgid "Get Help"
 msgstr "Få hjälp"
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
 msgstr "Hjälp på IRC"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
-msgstr "Hjälp på e-postlistor"
+msgstr "Hjälp på sändlistor"
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "Forum"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr "Fråga Fedora"
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
 msgstr "Gå med"
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
 msgstr "Gå med i Fedora"
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
 msgstr "Fedora SIG"
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
 msgstr "Fedoras kontosystem"
 
-#: data/templates/footer.html:41
+#: data/templates/footer.html:46
 msgid "Fedora Community"
 msgstr "Fedora-gemenskapen"
 
-#: data/templates/footer.html:46
+#: data/templates/footer.html:51
 msgid "Subprojects"
 msgstr "Underprojekt"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
 msgstr "Översättning"
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
 msgstr "Marknadsföring"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
 msgstr "Ambassadörer"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
 msgstr "Design"
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
 msgstr "Infrastruktur"
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
 msgstr "Webbplatser"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
 msgstr "Internationalisering"
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
 msgstr "Nyheter"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
 msgstr "Speciella intressegrupper (SIG)"
 
-#: data/templates/footer.html:67
+#: data/templates/footer.html:72
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedora är sponsrat av Red Hat."
 
-#: data/templates/footer.html:68
+#: data/templates/footer.html:73
 msgid "Learn more about the relationship between Red Hat and Fedora >"
 msgstr "Läs mer om förhållandet mellan Red Hat och Fedora >"
 
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr ""
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "Kontakt"
-
-#: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "Sponsorer"
-
-#: data/templates/footer.html:73
-msgid "Legal"
-msgstr "Juridik"
-
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "Riktlinjer för varumärket"
+#, fuzzy, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s Red Hat, Inc. med flera."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "Fedoraprojektet underhålls och drivs av gemenskapen. Denna webbsida underhålls av gemenskapen. Red Hat är inte ansvarig för innehållet."
+msgstr ""
+"Fedoraprojektet underhålls och drivs av gemenskapen. Denna webbplats "
+"underhålls av gemenskapen. Red Hat är inte ansvarigt för innehållet."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "Kontakt"
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "Sponsorer"
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "Juridik"
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "Riktlinjer för varumärket"
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr "Innehållslicens"
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
-msgstr ""
+msgstr "Regionspecifika Fedorawebbplatser"
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "Skaffa Fedora"
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -433,11 +410,13 @@ msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
 msgstr ""
+"Fedoraprojektets medarbetare i olika länder sköter sitt egna regionspecifika"
+" innehåll.  Varje webbplats är endast ansvarig för innehållet de publicerar."
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
-msgstr ""
+msgstr "En lista över regionspecifika webbplatser finns tillgänglig nedan."
 
 #: data/templates/head.html:51
 msgid "Europe, Middle East, and Africa"
-msgstr ""
+msgstr "Europa, mellanöstern och Afrika"
