--- a/fedoracommunity.org/po/hu.po
+++ b/fedoracommunity.org/po/hu.po
@@ -1,107 +1,97 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
 # Gabor Mako <makgab@m-info.hu>, 2011, 2012
 # Peter Borsa <peter.borsa@gmail.com>, 2011, 2012
 # Peter Bojtos <ptr@ulx.hu>, 2012
 # Zoltan Hoppár <zoltanh721@fedoraproject.org>, 2011, 2012
+# Meskó Balázs <meskobalazs@gmail.com>, 2016. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: Zoltan Hoppár <zoltanh721@fedoraproject.org>\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2016-11-02 02:29-0400\n"
+"Last-Translator: Copied by Zanata <copied-by-zanata@zanata.org>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/fedora-web/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: hu\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr "Fedora Banglades Közössége"
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr "Fedora Kína Közössége"
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
-msgstr "Fedora Indonézia Közössége"
+msgstr "Fedora Indonézia közösség"
 
 #: data/content/apac.html:1
 msgid "Fedora Japan Community"
-msgstr "Fedora Japán Közössége"
+msgstr "Fedora Japán közösség"
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr "Fedora Fülöp-szigetek Közössége"
+msgid "Fedora Philippines Community"
+msgstr "Fedora Fülöp-szigetek közösség"
+
+#: data/content/apac.html:1
+msgid "Fedora Sri Lanka Community"
+msgstr "Fedora Srí Lanka közösség"
+
+#: data/content/apac.html:1
+msgid "Fedora Vietnam Community"
+msgstr "Fedora Vietnam közösség"
+
+#: data/content/apac.html:1
+msgid "Fedora Myanmar Community"
+msgstr "Fedora Mianmar közösség"
 
 #: data/content/apac.html:1
 msgid "Fedora Taiwan Community"
 msgstr "Fedora Tajvan Közössége"
 
-#: data/content/apac.html:1
-msgid "Fedora Sri Lanka Community"
-msgstr "Fedora Sri Lanka Közössége"
-
-#: data/content/apac.html:1
-msgid "Fedora Vietnam Community"
-msgstr "Fedora Vietnám Közössége"
-
-#: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr "Fedora Malajzia Közössége"
-
-#: data/content/apac.html:26
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
-msgstr "Fedora közösség | Ázsia csendes-óceáni (APAC)"
+msgstr "Fedora közösség | Ázsia és a csendes-óceáni térség (APAC)"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
-msgstr "Ázsia csendes-óceáni"
+msgstr "Ázsia és a csendes-óceáni térség"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
 msgstr "Régióbeli források"
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
 msgstr "Fedora Wiki oldal"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
-msgstr "Levelezési lista"
+msgstr "Levelezőlista"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
 msgstr "Események"
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
 msgstr "Közösségi oldalak ebben a régióban"
 
 #: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr "Fedora Belgium Közössége"
-
-#: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr "Fedora Csehország Közössége"
+msgstr "Fedora Csehország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr "Fedora Franciaország Közössége"
+msgstr "Fedora Franciaország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
@@ -109,74 +99,61 @@ msgstr "Nem hivatalos német Fedora portál"
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr "Fedora Görögország Közössége"
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr "Fedora Magyarország Közössége"
+msgstr "Fedora Görögország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr "Fedora Olaszország Közössége"
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr "Fedora Moldávia Közössége"
+msgstr "Fedora Olaszország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
-msgstr "Fedora Hollandia Közössége"
+msgstr "Fedora Hollandia közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Poland Community"
-msgstr "Fedora Lengyelország Közössége"
-
-#: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr "Fedora Románia Közössége"
+msgstr "Fedora Lengyelország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr "Fedora Oroszország Közössége"
+msgstr "Fedora Oroszország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr "Fedora Spanyolország Közössége"
+msgstr "Fedora Spanyolország közösség"
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
-msgstr "Fedora Tunézia Közössége"
+msgstr "Fedora Tunézia közösség"
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr "Fedora Egyesült Királyság Közössége"
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
 msgstr "Fedora közösség | Európa (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
-msgstr "Európa, Közel-Kelet, és Afrika"
+msgstr "Európa, Közel-Kelet és Afrika"
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
-msgstr "Az EMEA régióban, így Európában, a Közel-Keleten, és Afrikában szolgálja ki a <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora nagyköveteket az EMEA csoportban</a>."
+msgstr ""
+"Az EMEA régiót, így Európát, a Közel-Keletet, és Afrikát a <a "
+"href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora nagykövetek "
+"EMEA csoportja</a> szolgálja."
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
 msgstr "Weboldal"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
 msgstr "E-mail cím"
 
 #: data/content/index.html:21
 msgid "Fedora Community | Index"
-msgstr "Fedora Közösség | Index"
+msgstr "Fedora közösség | Tárgymutató"
 
 #: data/content/index.html:27 data/templates/head.html:14
 msgid "Home"
@@ -186,17 +163,19 @@ msgstr "Főoldal"
 msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
-msgstr "Ez az a hely, ahol az emberek megkereshetik a saját helyi Fedora közösségüket."
+msgstr ""
+"Ez az a hely, ahol az emberek megkereshetik a saját helyi Fedora "
+"közösségüket."
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
-msgstr "Ázsia csendes-óceáni"
+msgstr "Ázsia és a csendes-óceáni térség"
 
 #: data/content/index.html:32
 msgid "Europe"
 msgstr "Európa"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
 msgstr "Latin-Amerika"
@@ -207,64 +186,28 @@ msgid "North America"
 msgstr "Észak-Amerika"
 
 #: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr "Fedora Argentin Közössége"
-
-#: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr "Fedora Brazília Közössége"
+msgstr "Fedora Brazília közösség"
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
-msgstr "Fedora Chile Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr "Fedora Kolumbia Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr "Fedora El Salvador Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr "Fedora Guatemala Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr "Fedora Latin-Amerika Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr "Fedora Mexikó Közössége"
+msgstr "Fedora Chile közösség"
 
 #: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
-msgstr "Fedora Nicaragua Közössége"
+msgstr "Fedora Nicaragua közösség"
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr "Fedora Panama Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr "Fedora Peru Közössége"
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr "Fedora Venezuela Közössége"
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr "Fedora Közösség | Latin-Amerika (LATAM)"
+msgstr "Fedora közösség| Latin-Amerika (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
 msgstr "Csevegés"
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr "Fedora Közösség | Észak-Amerika (NA)"
+msgstr "Fedora közösség | Észak-Amerika (NA)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
@@ -275,22 +218,24 @@ msgstr "Még több Fedora. Hivatalos Fedora Projekt oldal megtekintése:"
 msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
-msgstr "Helyi közösségi Fedora weboldal hozzáadása a gyűjteményhez? <a href=\"%s\">Igen, email küldése Fedora Websites csapatnak </a>"
+msgstr ""
+"Helyi közösségi Fedora weboldalt adna hozzá a jegyzékhez? <a "
+"href=\"%s\">Küldjön e-mailt a Fedora Websites csapatnak </a>"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
-msgstr "A Fedoráról"
+msgstr "A Fedora névjegye"
 
 #: data/templates/footer.html:11
 msgid "Planet Fedora"
 msgstr "Planet Fedora"
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Fedora Heti Hírek"
+msgid "Fedora Magazine"
+msgstr "Fedora Magazine"
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "Dokumentáció"
 
@@ -302,131 +247,162 @@ msgstr "Fedora Wiki"
 msgid "Download"
 msgstr "Letöltés"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Fedora beszerzése"
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "Teljes letöltési lista"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
+msgid "Alternative Downloads"
+msgstr ""
+
+#: data/templates/footer.html:32
 msgid "Support"
 msgstr "Támogatás"
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:33
 msgid "Get Help"
 msgstr "Segítség kérése"
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
 msgstr "IRC segítség"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
-msgstr "Levelezőlista Súgó"
+msgstr "Levelezőlista súgó"
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "Fórumok"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr "Ask Fedora – Kérdezz a Fedorától"
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
 msgstr "Csatlakozás"
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
 msgstr "Csatlakozás a Fedorához"
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
-msgstr "Fedora SIGs"
+msgstr "Fedora SIG-ek"
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
-msgstr "Fedora Nyilvántartó Rendszer FAS"
+msgstr "Fedora fiókrendszer (FAS)"
 
-#: data/templates/footer.html:41
+#: data/templates/footer.html:46
 msgid "Fedora Community"
 msgstr "Fedora közösség"
 
-#: data/templates/footer.html:46
+#: data/templates/footer.html:51
 msgid "Subprojects"
 msgstr "Alprojektek"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
 msgstr "Fordítás"
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
 msgstr "Marketing"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
 msgstr "Nagykövetek"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
 msgstr "Dizájn"
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
 msgstr "Infrastruktúra"
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
 msgstr "Weboldalak"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
 msgstr "Nemzetköziesítés"
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
 msgstr "Hírek"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
-msgstr "Speciális Érdekeltségű Csoportok (SIG-ek)"
-
-#: data/templates/footer.html:67
-msgid "Fedora is sponsored by Red Hat."
-msgstr "Fedora a Red Hat támogatását élvezi."
-
-#: data/templates/footer.html:68
-msgid "Learn more about the relationship between Red Hat and Fedora >"
-msgstr "Több információ a Red Hat és Fedora kapcsolatáról >"
-
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr "© 2011 Red Hat, Inc. és mások."
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "Kapcsolat"
+msgstr "Különleges érdekeltségű csoportok (SIG-ek)"
 
 #: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "Támogatók"
+msgid "Fedora is sponsored by Red Hat."
+msgstr "A Fedorát a Red Hat támogatja."
 
 #: data/templates/footer.html:73
-msgid "Legal"
-msgstr "Jogi megjegyzések"
+msgid "Learn more about the relationship between Red Hat and Fedora >"
+msgstr "Több információ a Red Hat és a Fedora kapcsolatáról >"
 
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "Védjegy irányelvek"
+#, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s Red Hat, Inc. és mások."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "A Fedora projekt  a közösség által vezetetett és karbantartott. Ez egy közösségi hely. Red Hat nem felelős a tartalomért."
+msgstr ""
+"A Fedora Projektet a közösség vezeti és tartja karban. Ez egy közösség által"
+" fenntartott oldal. A Red Hat nem felelős a tartalomért."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "Kapcsolat"
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "Támogatók"
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "Jogi megjegyzések"
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "Védjegy irányelvek"
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr "Tartalom licenc"
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
 msgstr "Régió-specifikus Fedora weboldalak"
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "Fedora beszerzése"
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -436,7 +412,10 @@ msgstr "Segítség"
 msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
-msgstr "Fedora projekt támogatói a különböző országokban karbantartják a saját régió-specifikus tartalmukat. Minden egyes oldalon egyedül felelősek az általuk beküldött tartalomért."
+msgstr ""
+"A Fedora Projekt támogatói különböző országokban karbantartják a saját "
+"régió-specifikus tartalmaikat. Minden egyes oldal saját maga felelős a "
+"megosztott tartalomért."
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
