--- a/fedoracommunity.org/po/ko.po
+++ b/fedoracommunity.org/po/ko.po
@@ -1,178 +1,155 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
+# MinWoo Joh <igtzhsou@naver.com>, 2015. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: Kévin Raymond <shaiton@fedoraproject.org>\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2015-09-07 04:21-0400\n"
+"Last-Translator: MinWoo Joh <igtzhsou@naver.com>\n"
 "Language-Team: Korean (http://www.transifex.com/projects/p/fedora-web/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: ko\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr ""
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
-msgstr ""
+msgstr "Fedora 인도네시아 커뮤니티"
 
 #: data/content/apac.html:1
 msgid "Fedora Japan Community"
-msgstr ""
+msgstr "Fedora 일본 커뮤니티"
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr ""
-
-#: data/content/apac.html:1
-msgid "Fedora Taiwan Community"
+msgid "Fedora Philippines Community"
 msgstr ""
 
 #: data/content/apac.html:1
 msgid "Fedora Sri Lanka Community"
-msgstr ""
+msgstr "Fedora 스리랑카 커뮤니티"
 
 #: data/content/apac.html:1
 msgid "Fedora Vietnam Community"
-msgstr ""
+msgstr "Fedora 베트남 커뮤니티"
 
 #: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr ""
+msgid "Fedora Myanmar Community"
+msgstr "Fedora 미얀마 커뮤니티"
 
-#: data/content/apac.html:26
+#: data/content/apac.html:1
+msgid "Fedora Taiwan Community"
+msgstr "Fedora 대만 커뮤니티"
+
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
-msgstr ""
+msgstr "Fedora 커뮤니티 | 아시아-태평양 (APAC)"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
-msgstr ""
+msgstr "아시아-태평양"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
-msgstr ""
+msgstr "지역별 자료"
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
 msgstr "Fedora 위키"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
-msgstr ""
+msgstr "메일링 리스트"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
 msgstr "이벤트"
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr ""
+msgstr "이 지역의 커뮤니티 사이트"
 
 #: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr ""
+msgstr "Fedora 체코 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr ""
+msgstr "Fedora 프랑스 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
-msgstr ""
+msgstr "Fedora 비공식 독일 Fedora 포털"
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr ""
+msgstr "Fedora 그리스 커뮤니티 포털"
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr ""
+msgstr "Fedora 이탈리아 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
-msgstr ""
+msgstr "Fedora 네덜란드 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora Poland Community"
-msgstr ""
-
-#: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr ""
+msgstr "Fedora 폴란드 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr ""
+msgstr "Fedora 러시아 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr ""
+msgstr "Fedora 스페인 커뮤니티"
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
-msgstr ""
+msgstr "Fedora 튀니지 커뮤니티"
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr ""
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
-msgstr ""
+msgstr "Fedora 커뮤니티 | 유럽 (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
-msgstr ""
+msgstr "유럽, 중동아시아 & 아프리카 "
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
 msgstr ""
+"유럽, 중동아시아 & 아프리카를 포함한 EMEA지역은 <a "
+"href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora 대사 EMEA "
+"그룹</a>에서 담당하고 있습니다."
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
-msgstr ""
+msgstr "웹사이트"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
-msgstr ""
+msgstr "이메일 주소"
 
 #: data/content/index.html:21
 msgid "Fedora Community | Index"
-msgstr ""
+msgstr "Fedora 커뮤니티 | 목록"
 
 #: data/content/index.html:27 data/templates/head.html:14
 msgid "Home"
@@ -182,96 +159,60 @@ msgstr "홈 "
 msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
-msgstr ""
+msgstr "여기는 지역별 Fedora 사이트를 찾는 사람들이 알아볼 수 있는 곳입니다."
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
-msgstr ""
+msgstr "아시아-태평양"
 
 #: data/content/index.html:32
 msgid "Europe"
-msgstr ""
+msgstr "유럽"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
-msgstr ""
+msgstr "라틴 아메리카"
 
 #: data/content/index.html:34 data/content/northam.html:28
 #: data/templates/head.html:53
 msgid "North America"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr ""
+msgstr "북아메리카"
 
 #: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr ""
+msgstr "Fedora 브라질 포털"
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr ""
+msgstr "Fedora 칠레 커뮤니티"
 
 #: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
-msgstr ""
+msgstr "Fedora 나카라과 커뮤니티"
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr ""
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr ""
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr ""
+msgstr "Fedora 커뮤니티 | 라틴 아메리카 (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
-msgstr ""
+msgstr "채팅"
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr ""
+msgstr "Fedora 커뮤니티 | 북 아메리카 (LATAM)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
-msgstr ""
+msgstr "Fedora에는 더 많은 것이 있습니다. Fedora 프로젝트 공식 홈페이지를 방문하세요:"
 
 #: data/templates/content-fpolinkback.html:14
 #, python-format
 msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
-msgstr ""
+msgstr "여기에 당신의 지역 Fedora 사이트를 추가하고 싶으신가요? <a href=\"%s\">웹사이트 팀에 문의하세요 </a>"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
@@ -282,11 +223,11 @@ msgid "Planet Fedora"
 msgstr "Planet Fedora"
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Fedora 주간 소식"
+msgid "Fedora Magazine"
+msgstr "Fedora 매거진"
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "문서"
 
@@ -298,131 +239,162 @@ msgstr "Fedora 위키"
 msgid "Download"
 msgstr "다운로드"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Fedora 받기 "
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "전체 다운로드 목록"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
+msgid "Alternative Downloads"
+msgstr ""
+
+#: data/templates/footer.html:32
 msgid "Support"
 msgstr "지원"
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:33
 msgid "Get Help"
 msgstr "도움 요청 "
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
 msgstr "IRC 도움 요청"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
 msgstr "메일링 리스트 도움 요청"
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "포럼"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr ""
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
 msgstr "가입"
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
 msgstr "Fedora 가입  "
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
 msgstr "Fedora SIGs"
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
 msgstr "Fedora 계정 시스템"
 
-#: data/templates/footer.html:41
+#: data/templates/footer.html:46
 msgid "Fedora Community"
 msgstr "Fedora 커뮤니티"
 
-#: data/templates/footer.html:46
+#: data/templates/footer.html:51
 msgid "Subprojects"
 msgstr "하위 프로젝트"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
-msgstr ""
+msgstr "번역"
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
-msgstr ""
+msgstr "마케팅"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
-msgstr ""
+msgstr "대사"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
-msgstr ""
+msgstr "디자인"
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
-msgstr ""
+msgstr "인프라"
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
-msgstr ""
+msgstr "웹사이트"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
-msgstr ""
+msgstr "국제화"
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
-msgstr ""
+msgstr "뉴스"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
-msgstr ""
+msgstr "SIGs"
 
-#: data/templates/footer.html:67
+#: data/templates/footer.html:72
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedora는 Red Hat의 후원을 받고 있습니다."
 
-#: data/templates/footer.html:68
+#: data/templates/footer.html:73
 msgid "Learn more about the relationship between Red Hat and Fedora >"
 msgstr "Red Hat과 Fedora의 관계에 대해 더 자세히 알아보기 >"
 
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr ""
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "연락처  "
-
-#: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "후원사 "
-
-#: data/templates/footer.html:73
-msgid "Legal"
-msgstr "법적 고지"
-
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "상표 가이드라인"
+#, fuzzy, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s Red Hat, Inc. 외."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "Fedora Project는 커뮤니티에 의해 유지되며 운영되고 있습니다. 이곳은 커뮤니티에서 관리하는 사이트입니다. Red Hat은 이 내용에 대한 책임이 없습니다."
+msgstr ""
+"Fedora Project는 커뮤니티에 의해 유지되며 운영되고 있습니다. 이곳은 커뮤니티에서 관리하는 사이트입니다. Red Hat은 이 "
+"내용에 대한 책임이 없습니다."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "연락처  "
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "후원사 "
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "법적 고지"
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "상표 가이드라인"
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr ""
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
-msgstr ""
+msgstr "지역 페도라 웹사이트"
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "Fedora 받기 "
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -433,11 +405,12 @@ msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
 msgstr ""
+"여러 국가의 Fedora 프로젝트 기여자들은 지역만의 컨텐츠를 관리합니다. 각 사이트는 내부 포스트에 대해 독립적인 책임을 가집니다."
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
-msgstr ""
+msgstr "지역 페도라 웹사이트 목록은 아래에서 확인하실 수 있습니다."
 
 #: data/templates/head.html:51
 msgid "Europe, Middle East, and Africa"
-msgstr ""
+msgstr "유럽, 중동아시아, 아프리카"
