--- a/fedoracommunity.org/po/pt.po
+++ b/fedoracommunity.org/po/pt.po
@@ -1,34 +1,29 @@
 # Translations template for PROJECT.
 # Copyright (C) 2013 ORGANIZATION
 # This file is distributed under the same license as the PROJECT project.
-# 
+#
 # Translators:
 # alfalb_mansil, 2014
 # Miguel Fonseca <miguel.cnf@gmail.com>, 2012
 # Ricardo Pinto <ricardo.bigote@gmail.com>, 2011
 # Rui Gouveia <rui.gouveia@gmail.com>, 2011
+# Manuela Silva <manuela.silva@sky.com>, 2016. #zanata
+# pedro andrade <pmm.andrade@gmail.com>, 2016. #zanata
 msgid ""
 msgstr ""
-"Project-Id-Version: Fedora Websites\n"
+"Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-08-10 10:24+0200\n"
-"PO-Revision-Date: 2015-02-03 15:16+0000\n"
-"Last-Translator: alfalb_mansil\n"
+"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"PO-Revision-Date: 2016-11-04 08:04-0400\n"
+"Last-Translator: pedro andrade <pmm.andrade@gmail.com>\n"
 "Language-Team: Portuguese (http://www.transifex.com/projects/p/fedora-web/language/pt/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 0.9.6\n"
 "Language: pt\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-
-#: data/content/apac.html:1
-msgid "Fedora Bangladesh Community"
-msgstr "Comunidade Fedora Bangladesh"
-
-#: data/content/apac.html:1
-msgid "Fedora China Community"
-msgstr "Comunidade Fedora China"
+"Generated-By: Babel 0.9.6\n"
+"X-Generator: Zanata 3.9.6\n"
 
 #: data/content/apac.html:1
 msgid "Fedora Indonesia Community"
@@ -39,12 +34,8 @@ msgid "Fedora Japan Community"
 msgstr "Comunidade Fedora Japão"
 
 #: data/content/apac.html:1
-msgid "Fedora Phillipines Community"
-msgstr "Comunidade Fedora Filipinas"
-
-#: data/content/apac.html:1
-msgid "Fedora Taiwan Community"
-msgstr "Comunidade Fedora Taiwan"
+msgid "Fedora Philippines Community"
+msgstr "Comunidade  Fedora Filipinas"
 
 #: data/content/apac.html:1
 msgid "Fedora Sri Lanka Community"
@@ -55,73 +46,65 @@ msgid "Fedora Vietnam Community"
 msgstr "Comunidade Fedora Vietname"
 
 #: data/content/apac.html:1
-msgid "Fedora Malaysia Community"
-msgstr "Comunidade Fedora Malásia"
+msgid "Fedora Myanmar Community"
+msgstr "Comunidade Fedora Myanmar"
 
-#: data/content/apac.html:26
+#: data/content/apac.html:1
+msgid "Fedora Taiwan Community"
+msgstr "Comunidade Fedora Taiwan"
+
+#: data/content/apac.html:24
 msgid "Fedora Community | Asia Pacific (APAC)"
 msgstr "Comunidade Fedora | Ásia - Pacífico (APAC)"
 
-#: data/content/apac.html:36 data/templates/head.html:50
+#: data/content/apac.html:34 data/templates/head.html:50
 msgid "Asia-Pacific"
 msgstr "Ásia - Pacífico"
 
-#: data/content/apac.html:37 data/content/emea.html:42
-#: data/content/latam.html:39 data/content/northam.html:29
+#: data/content/apac.html:35 data/content/emea.html:37
+#: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
 msgstr "Recursos por Região"
 
-#: data/content/apac.html:44 data/content/northam.html:35
+#: data/content/apac.html:42 data/content/northam.html:35
 msgid "Fedora Wiki Page"
 msgstr "Página Wiki do Fedora"
 
-#: data/content/apac.html:47 data/content/latam.html:49
+#: data/content/apac.html:45 data/content/latam.html:35
 #: data/content/northam.html:38
 msgid "Mailing List"
 msgstr "Lista de Endereços"
 
-#: data/content/apac.html:51 data/content/emea.html:54
-#: data/content/latam.html:56 data/content/northam.html:41
+#: data/content/apac.html:49 data/content/emea.html:49
+#: data/content/latam.html:42 data/content/northam.html:41
 #: data/templates/footer.html:15
 msgid "Events"
 msgstr "Eventos"
 
-#: data/content/apac.html:62 data/content/emea.html:64
-#: data/content/latam.html:67 data/content/northam.html:52
+#: data/content/apac.html:60 data/content/emea.html:59
+#: data/content/latam.html:53 data/content/northam.html:52
 msgid "Community Sites in this Region"
 msgstr "Sites da Comunidade nesta Região"
 
 #: data/content/emea.html:1
-msgid "Fedora Belgium Community"
-msgstr "Comunidade Fedora Bélgica"
-
-#: data/content/emea.html:1
 msgid "Fedora Czech Republic Community"
-msgstr "Comunidade Fedora Républica Checa"
+msgstr "Comunidade da República Checa do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora French Community"
-msgstr "Comunidade Fedora Francesa"
+msgstr "Comunidade Francesa do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora unofficial German Fedora Portal"
-msgstr "Comunidade não-oficial Portal Fedora Alemão"
+msgstr "Portal Fedora Alemão não oficial do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora Greek Community Portal"
-msgstr "Comunidade Portal Fedora Grego"
-
-#: data/content/emea.html:1
-msgid "Fedora Hungarian Community"
-msgstr "Comunidade Fedora Húngara"
+msgstr "Portal da Comunidade Grega do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora Italian Community"
-msgstr "Comunidade Fedora Italiana"
-
-#: data/content/emea.html:1
-msgid "Fedora Moldavia Community"
-msgstr "Comunidade Fedora Moldávia"
+msgstr "Comunidade Italiana do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora Netherlands Community"
@@ -132,45 +115,40 @@ msgid "Fedora Poland Community"
 msgstr "Comunidade Fedora Polónia"
 
 #: data/content/emea.html:1
-msgid "Fedora Romania Community"
-msgstr "Comunidade Fedora Roménia"
-
-#: data/content/emea.html:1
 msgid "Fedora Russian Community"
-msgstr "Comunidade Fedora Russa"
+msgstr "Comunidade Russa do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora Spanish Community"
-msgstr "Comunidade Fedora Espanhola"
+msgstr "Comunidade Espanhola do Fedora"
 
 #: data/content/emea.html:1
 msgid "Fedora Tunisia Community"
 msgstr "Comunidade Fedora Tunísia"
 
-#: data/content/emea.html:1
-msgid "Fedora UK Community"
-msgstr "Comunidade Fedora Reino Unido"
-
-#: data/content/emea.html:32
+#: data/content/emea.html:27
 msgid "Fedora Community | Europe (EMEA)"
-msgstr "Comunidade Fedora | Europa (EMEA)"
+msgstr "Comunidade do Fedora | Europa (EMEA)"
 
-#: data/content/emea.html:41
+#: data/content/emea.html:36
 msgid "Europe, Middle East, & Africa"
 msgstr "Europa, Médio Oriente e África"
 
-#: data/content/emea.html:44
+#: data/content/emea.html:39
 msgid ""
 "The EMEA region, including Europe, the Middle East, & Africa, is served by "
 "the <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Fedora "
 "Ambassadors EMEA group</a>."
-msgstr "A região EMEA, incluindo a Europa, o Médio Oriente e África, é servida pelo <a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Grupo de Embaixadores EMEA do Fedora</a>."
+msgstr ""
+"A região EMEA, incluindo a Europa, o Médio Oriente e África, é servida pelo "
+"<a href=\"http://fedoraproject.org/wiki/Ambassadors/EMEA\">Grupo de "
+"Embaixadores EMEA do Fedora</a>."
 
-#: data/content/emea.html:48 data/content/latam.html:46
+#: data/content/emea.html:43
 msgid "Website"
 msgstr "Site da Web"
 
-#: data/content/emea.html:51
+#: data/content/emea.html:46
 msgid "Email Address"
 msgstr "Endereço de Correio Eletrónico"
 
@@ -186,7 +164,9 @@ msgstr "Início"
 msgid ""
 "This is a a place where folks seeking out their particular local Fedora "
 "community could go find it."
-msgstr "Este é o lugar onde as pessoas que procuram a sua comunidade local Fedora a podem encontrar."
+msgstr ""
+"Este é um lugar onde as pessoas que procuram a sua comunidade do Fedora "
+"local, a poderiam encontrar."
 
 #: data/content/index.html:31
 msgid "Asia Pacific"
@@ -196,7 +176,7 @@ msgstr "Ásia - Pacífico"
 msgid "Europe"
 msgstr "Europa"
 
-#: data/content/index.html:33 data/content/latam.html:38
+#: data/content/index.html:33 data/content/latam.html:29
 #: data/templates/head.html:52
 msgid "Latin America"
 msgstr "América Latina"
@@ -207,75 +187,44 @@ msgid "North America"
 msgstr "América do Norte"
 
 #: data/content/latam.html:1
-msgid "Fedora Argentina Community"
-msgstr "Comunidade Fedora Argentina"
-
-#: data/content/latam.html:1
 msgid "Fedora Brazil Portal"
-msgstr "Comunidade Fedora Brasil"
+msgstr "Comunidade do Brasil do Fedora"
 
 #: data/content/latam.html:1
 msgid "Fedora Chile Community"
 msgstr "Comunidade Fedora Chile"
 
 #: data/content/latam.html:1
-msgid "Fedora Colombia Community"
-msgstr "Comunidade Fedora Colombia"
-
-#: data/content/latam.html:1
-msgid "Fedora El Salvador Community"
-msgstr "Comunidade Fedora El Salvador"
-
-#: data/content/latam.html:1
-msgid "Fedora Guatemala Community"
-msgstr "Comunidade Fedora Guatemala"
-
-#: data/content/latam.html:1
-msgid "Fedora Latin America Community"
-msgstr "Comunidade Fedora Latino-Americana"
-
-#: data/content/latam.html:1
-msgid "Fedora Mexico Community"
-msgstr "Comunidade Fedora México"
-
-#: data/content/latam.html:1
 msgid "Fedora Nicaragua Community"
 msgstr "Comunidade Fedora Nicarágua"
 
-#: data/content/latam.html:1
-msgid "Fedora Panama Community"
-msgstr "Comunidade Fedora Panamá"
-
-#: data/content/latam.html:1
-msgid "Fedora Peru Community"
-msgstr "Comunidade Fedora Perú"
-
-#: data/content/latam.html:1
-msgid "Fedora Venezuela Community"
-msgstr "Comunidade Fedora Venezuela"
-
-#: data/content/latam.html:28
+#: data/content/latam.html:19
 msgid "Fedora Community | Latin America (LATAM)"
-msgstr "Comunidade Fedora | América Latina (LATAM)"
+msgstr "Comunidade do Fedora | América Latina (LATAM)"
 
-#: data/content/latam.html:53
+#: data/content/latam.html:39
 msgid "Chat"
-msgstr "Chat"
+msgstr "Conversar"
 
 #: data/content/northam.html:18
 msgid "Fedora Community | North America (NA)"
-msgstr "Comunidade Fedora | América do Norte (NA)"
+msgstr "Comunidade do Fedora | América do Norte (NA)"
 
 #: data/templates/content-fpolinkback.html:9
 msgid "There's more to Fedora. Visit the official Fedora project website at:"
-msgstr "O Fedora não é só isto. Visite o site oficial do Projecto Fedora em:"
+msgstr ""
+"Ainda existe mais do Fedora. Visite o site da Web oficial do Projecto Fedora"
+" em:"
 
 #: data/templates/content-fpolinkback.html:14
 #, python-format
 msgid ""
 "Want to add your local community's Fedora website to this directory? <a "
 "href=\"%s\">Email the Fedora Websites team </a>"
-msgstr "Quer acrescentar o sítio web da sua comunidade local a esta listagem? <a href=\"%s\">Envie um email à equipa Fedora Websites</a>"
+msgstr ""
+"Pretende adicionar o site da Web da sua comunidade Fedora local a esta "
+"diretoria? <a href=\"%s\">Envie uma mensagem à equipa de Sites da Web do "
+"Fedora</a>"
 
 #: data/templates/footer.html:10
 msgid "About Fedora"
@@ -286,147 +235,178 @@ msgid "Planet Fedora"
 msgstr "Planeta Fedora"
 
 #: data/templates/footer.html:12
-msgid "Fedora Weekly News"
-msgstr "Notícias Semanais do Fedora"
+msgid "Fedora Magazine"
+msgstr "Magazine do Fedora"
 
-#: data/templates/footer.html:13 data/templates/footer.html:32
-#: data/templates/footer.html:47
+#: data/templates/footer.html:13 data/templates/footer.html:37
+#: data/templates/footer.html:52
 msgid "Documentation"
 msgstr "Documentação"
 
 #: data/templates/footer.html:14
 msgid "Fedora Wiki"
-msgstr "Fedora Wiki"
+msgstr "Wiki do Fedora"
 
 #: data/templates/footer.html:20
 msgid "Download"
 msgstr "Transferir"
 
-#: data/templates/footer.html:21 data/templates/head.html:15
-msgid "Get Fedora"
-msgstr "Obter o Fedora"
+#: data/templates/footer.html:21
+msgid "Get Fedora Workstation"
+msgstr ""
 
 #: data/templates/footer.html:22
-msgid "Full Download List"
-msgstr "Lista Completa de Transferências"
+msgid "Get Fedora Server"
+msgstr ""
+
+#: data/templates/footer.html:23
+msgid "Get Fedora Atomic"
+msgstr ""
+
+#: data/templates/footer.html:24
+msgid "Fedora Spins"
+msgstr ""
+
+#: data/templates/footer.html:25
+msgid "Fedora Labs"
+msgstr ""
+
+#: data/templates/footer.html:26
+msgid "Fedora ARM<span class=\"sup\">®</span>"
+msgstr ""
 
 #: data/templates/footer.html:27
-msgid "Support"
-msgstr "Patrocinar"
+msgid "Alternative Downloads"
+msgstr ""
 
-#: data/templates/footer.html:28
+#: data/templates/footer.html:32
+msgid "Support"
+msgstr "Suporte"
+
+#: data/templates/footer.html:33
 msgid "Get Help"
 msgstr "Obter Ajuda"
 
-#: data/templates/footer.html:29
+#: data/templates/footer.html:34
 msgid "IRC Help"
 msgstr "Ajuda IRC"
 
-#: data/templates/footer.html:30
+#: data/templates/footer.html:35
 msgid "Mailing List Help"
-msgstr "Ajuda das Listas de Endereços"
+msgstr "Ajuda da Lista de Endereços"
 
-#: data/templates/footer.html:31
-msgid "Forums"
-msgstr "Fóruns"
+#: data/templates/footer.html:36
+msgid "Ask Fedora"
+msgstr "Perguntar ao Fedora"
 
-#: data/templates/footer.html:37
+#: data/templates/footer.html:42
 msgid "Join"
-msgstr "Junte-se"
+msgstr "Aderir"
 
-#: data/templates/footer.html:38
+#: data/templates/footer.html:43
 msgid "Join Fedora"
 msgstr "Junte-se ao Fedora"
 
-#: data/templates/footer.html:39
+#: data/templates/footer.html:44
 msgid "Fedora SIGs"
 msgstr "SIGs do Fedora"
 
-#: data/templates/footer.html:40
+#: data/templates/footer.html:45
 msgid "Fedora Account System"
-msgstr "Sistema de Contas Fedora (FAS)"
-
-#: data/templates/footer.html:41
-msgid "Fedora Community"
-msgstr "Comunidade Fedora"
+msgstr "Sistema de Contas do Fedora (FAS)"
 
 #: data/templates/footer.html:46
+msgid "Fedora Community"
+msgstr "Comunidade do Fedora"
+
+#: data/templates/footer.html:51
 msgid "Subprojects"
 msgstr "Subprojectos"
 
-#: data/templates/footer.html:48
+#: data/templates/footer.html:53
 msgid "Translation"
 msgstr "Tradução"
 
-#: data/templates/footer.html:49
+#: data/templates/footer.html:54
 msgid "Marketing"
-msgstr "Marketing"
+msgstr "Comercialização"
 
-#: data/templates/footer.html:50
+#: data/templates/footer.html:55
 msgid "Ambassadors"
 msgstr "Embaixadores"
 
-#: data/templates/footer.html:51
+#: data/templates/footer.html:56
 msgid "Design"
 msgstr "Design"
 
-#: data/templates/footer.html:52
+#: data/templates/footer.html:57
 msgid "Infrastructure"
-msgstr "Infraestructura"
+msgstr "Infraestrutura"
 
-#: data/templates/footer.html:58
+#: data/templates/footer.html:63
 msgid "Websites"
-msgstr "Sítios web"
+msgstr "Sites da Web"
 
-#: data/templates/footer.html:59
+#: data/templates/footer.html:64
 msgid "Internationalization"
 msgstr "Internacionalização"
 
-#: data/templates/footer.html:60
+#: data/templates/footer.html:65
 msgid "News"
 msgstr "Notícias"
 
-#: data/templates/footer.html:61
+#: data/templates/footer.html:66
 msgid "Special Interest Groups (SIGs)"
 msgstr "Grupos de Interesse Especiais (SIGs)"
 
-#: data/templates/footer.html:67
+#: data/templates/footer.html:72
 msgid "Fedora is sponsored by Red Hat."
 msgstr "Fedora é patrocinado por Red Hat."
 
-#: data/templates/footer.html:68
+#: data/templates/footer.html:73
 msgid "Learn more about the relationship between Red Hat and Fedora >"
 msgstr "Saber mais sobre a relação entre a Red Hat e o Fedora >"
 
-#: data/templates/footer.html:69
-msgid "© 2011 Red Hat, Inc. and others."
-msgstr "© 2011 Red Hat, Inc. e outros."
-
-#: data/templates/footer.html:71
-msgid "Contact"
-msgstr "Contacto"
-
-#: data/templates/footer.html:72
-msgid "Sponsors"
-msgstr "Patrocinadores"
-
-#: data/templates/footer.html:73
-msgid "Legal"
-msgstr "Legal"
-
 #: data/templates/footer.html:74
-msgid "Trademark Guidelines"
-msgstr "Guias de conduta da Marca Registada"
+#, python-format
+msgid "© %(year)s Red Hat, Inc. and others."
+msgstr "© %(year)s Red Hat, Inc. e outros."
 
 #: data/templates/footer.html:76
 msgid ""
 "The Fedora Project is maintained and driven by the community. This is a "
 "community maintained site. Red Hat is not responsible for content."
-msgstr "O Projecto Fedora é mantido e direccionado pela comunidade. Este é um sítio mantido pela comunidade. A Red Hat não é responsável pelo seu conteúdo."
+msgstr ""
+"O Projecto Fedora é mantido e direcionado pela comunidade. Este é um site "
+"mantido pela comunidade. A Red Hat não é responsável pelo seu conteúdo."
+
+#: data/templates/footer.html:78
+msgid "Contact"
+msgstr "Contacto"
+
+#: data/templates/footer.html:79
+msgid "Sponsors"
+msgstr "Patrocinadores"
+
+#: data/templates/footer.html:80
+msgid "Legal"
+msgstr "Legal"
+
+#: data/templates/footer.html:81
+msgid "Trademark Guidelines"
+msgstr "Linhas Diretrizes da Marca Registada"
+
+#: data/templates/footer.html:82
+msgid "Content License"
+msgstr "Conteúdo da Licença"
 
 #: data/templates/head.html:9
 msgid "Region-Specific Fedora Websites"
-msgstr "Sítios web do Fedora por Região"
+msgstr "Sites da Web do Fedora por Região"
+
+#: data/templates/head.html:15
+msgid "Get Fedora"
+msgstr "Obter o Fedora"
 
 #: data/templates/head.html:16
 msgid "Help"
@@ -436,11 +416,14 @@ msgstr "Ajuda"
 msgid ""
 "Fedora Project contributors in various countries maintain their own region-"
 "specific content. Each site is solely responsible for the content they post."
-msgstr "Colaboradores do Projecto Fedora em vários países mantêm os seus conteúdos específicos da região. Cada sítio é o único responsável pelo conteúdo que publica."
+msgstr ""
+"Os colaboradores do Projeto Fedora em vários países mantêm os seus conteúdos"
+" específicos da região. Cada site é o único responsável pelo conteúdo que "
+"publica."
 
 #: data/templates/head.html:46
 msgid "A list of region-specific websites is available below."
-msgstr "Está disponível abaixo uma lista de sítios web por região."
+msgstr "Em baixo, está disponível uma lista de sites da Web por região."
 
 #: data/templates/head.html:51
 msgid "Europe, Middle East, and Africa"
